data/derived/sp14/progs/unify/prog1361.ml.out
Characters 9-13:
  let [] = 1232;;
           ^^^^
Error: This expression has type int but an expression was expected of type
         'a list
